# cgcolle

./: CMakeLists.txt  README.md
cgcolle-editor/: CGColleV1CartesianProductRule.cpp  CGColleV1CartesianProductRule.h  CGColleV1CompositeRule.cpp  CGColleV1CompositeRule.h  CGColleV1Entry.cpp  CGColleV1Entry.h  CGColleV1File.cpp  CGColleV1File.h  CGColleV1StaticRule.cpp  CGColleV1StaticRule.h  MainWindow.cpp  MainWindow.h  MainWindow.ui  ReadWriteUtils.h  cgcolle-editor.pro
encoder/: CMakeLists.txt  ImageDiffGenerator.cpp  ImageDiffGenerator.h  ImageGroup.h  ImageGrouper.h  ImageMux.cpp  ImageMux.h  NameImageGrouper.cpp  NameImageGrouper.h  SimilarityImageGrouper.cpp  SimilarityImageGrouper.h  main.cpp
lib/: CMakeLists.txt  ImageEntry.cpp  ImageEntry.h
